tests/ui/static/gc/fsa/drop_glue.stderr
error: The drop method for `Wrapper<FinalizerUnsafeWrapper<FinalizerUnsafeWrapper<FinalizerUnsafeType>>>` cannot be safely finalized.
  --> $DIR/drop_glue.rs:19:13
   |
LL |         use_val(&self.0);
   |                 -------
   |                 |
   |                 a finalizer cannot safely use this `FinalizerUnsafeWrapper<FinalizerUnsafeWrapper<FinalizerUnsafeType>>`
   |                 from a drop method because it does not implement `Send` + `Sync`.
...
LL |     Gc::new(Wrapper(FinalizerUnsafeWrapper(FinalizerUnsafeWrapper(FinalizerUnsafeType(1)))));
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<Wrapper<FinalizerUnsafeWrapper<FinalizerUnsafeWrapper<FinalizerUnsafeType>>>>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values which are thread-safe.

error: The drop method for `FinalizerUnsafeWrapper<FinalizerUnsafeWrapper<FinalizerUnsafeType>>` cannot be safely finalized.
  --> $DIR/drop_glue.rs:19:13
   |
LL |         use_val(&self.0);
   |                 -------
   |                 |
   |                 a finalizer cannot safely use this `FinalizerUnsafeWrapper<FinalizerUnsafeType>`
   |                 from a drop method because it does not implement `Send` + `Sync`.
...
LL |     Gc::new(Wrapper(FinalizerUnsafeWrapper(FinalizerUnsafeWrapper(FinalizerUnsafeType(1)))));
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<Wrapper<FinalizerUnsafeWrapper<FinalizerUnsafeWrapper<FinalizerUnsafeType>>>>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values which are thread-safe.

error: aborting due to 2 previous errors

